--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ VITE_BASE_URL=http://localhost:4000
 VITE_ROLE_ADMIN=admin
 
 ##url del servidor de BACKEND de RENDER (comentado para desarrollo local)
-##VITE_BASE_URL=https://productsbackend-xgjg.onrender.com
+##VITE_BASE_URL=https://productsbackend-dwu2.onrender.com
