--- a/.env
+++ b/.env
@@ -1,8 +1,10 @@
-###Conexion al Backend
-VITE_BASE_URL=http://localhost:4000
+# Conexión al Backend (PRODUCCIÓN para Render)
+VITE_API_URL=https://productsbackend-dwu2.onrender.com
+VITE_BACKEND_URL=https://productsbackend-dwu2.onrender.com
 
-###Nombre del Rol Admin 
+# Rol Admin
 VITE_ROLE_ADMIN=admin
 
-##url del servidor de BACKEND de RENDER (comentado para desarrollo local)
-##VITE_BASE_URL=https://productsbackend-dwu2.onrender.com
+# Para desarrollo local (COMENTADO para producción)
+# VITE_API_URL=http://localhost:4000
+# VITE_BACKEND_URL=http://localhost:4000
